// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasketComponent should render correctly 1`] = `
<app-basket
  basketService={[Function BasketService]}
  toggleService={[Function ToggleService]}
>
  <div
    class="basketContainer"
  >
    <div
      class="basketContainerDetail"
    >
      <div>
        <span
          id="basketTotal"
          ng-reflect-translate="Basket.Total"
          ng-reflect-translate-params="[object Object]"
        >
          Total: 0,00 gbp
        </span>
      </div>
      <div>
        <span
          id="basketLength"
          ng-reflect-translate="Basket.Items"
          ng-reflect-translate-params="[object Object]"
        >
          Cats: 0
        </span>
      </div>
    </div>
    <div
      class="basketContainerButtons"
    >
      <app-button
        id="clearTheBasketButton"
        ng-reflect-text="Clean"
      >
        <button>
           Clean
  
        </button>
      </app-button>
      <app-button
        id="quickViewButton"
        ng-reflect-text="Quick view"
      >
        <button>
           Quick view
  
        </button>
      </app-button>
    </div>
  </div>
</app-basket>
`;

exports[`BasketComponent should render correctly with cat in the basket 1`] = `
<app-basket
  basketService={[Function BasketService]}
  toggleService={[Function ToggleService]}
>
  <div
    class="basketContainer"
  >
    <div
      class="basketContainerDetail"
    >
      <div>
        <span
          id="basketTotal"
          ng-reflect-translate="Basket.Total"
          ng-reflect-translate-params="[object Object]"
        >
          Total: 3,20 gbp
        </span>
      </div>
      <div>
        <span
          id="basketLength"
          ng-reflect-translate="Basket.Items"
          ng-reflect-translate-params="[object Object]"
        >
          Cats: 1
        </span>
      </div>
    </div>
    <div
      class="basketContainerButtons"
    >
      <app-button
        id="clearTheBasketButton"
        ng-reflect-text="Clean"
      >
        <button>
           Clean
  
        </button>
      </app-button>
      <app-button
        id="quickViewButton"
        ng-reflect-text="Quick view"
      >
        <button>
           Quick view
  
        </button>
      </app-button>
    </div>
  </div>
</app-basket>
`;
